# rtfkit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  deny.toml
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: basic_conversion.py  custom_limits.py  inspect_document.py
bindings/python/python/rtfkit/: __init__.py  __init__.pyi
bindings/python/src/: convert.rs  docx.rs  errors.rs  html.rs  ir.rs  lib.rs  limits.rs  parse.rs  pdf.rs  report.rs
bindings/python/tests/: conftest.py  test_docx.py  test_errors.py  test_html.py  test_ir.py  test_parse.py  test_pdf.py
crates/rtfkit-cli/: Cargo.toml
crates/rtfkit-cli/src/: main.rs
crates/rtfkit-cli/tests/: cli_contract_tests.rs  determinism_tests.rs  docx_integration_tests.rs  golden_tests.rs  limits_tests.rs  realworld_tests.rs
crates/rtfkit-cli/tests/cli_contract/: background_color.rs  block_shading.rs  determinism.rs  document_structure.rs  exit_codes.rs  font_color.rs  html_css.rs  images.rs  limits.rs  mod.rs  pdf.rs  recovery.rs  regression.rs  strict_mode.rs  style_profiles.rs  warnings.rs
crates/rtfkit-cli/tests/determinism/: docx_xml.rs  html.rs  html_images.rs  ir.rs  mod.rs  pdf.rs  pdf_images.rs  report.rs  variability.rs
crates/rtfkit-cli/tests/docx_integration/: images.rs  lists.rs  mod.rs  paragraphs.rs  style_profiles.rs  tables.rs
crates/rtfkit-cli/tests/support/: cli.rs  docx_xml.rs  fs.rs  mod.rs
crates/rtfkit-docx/: Cargo.toml
crates/rtfkit-docx/src/: allocators.rs  context.rs  error.rs  image.rs  lib.rs  options.rs  paragraph.rs  shading.rs  structure.rs  table.rs  utils.rs  writer.rs
crates/rtfkit-html/: Cargo.toml
crates/rtfkit-html/src/: error.rs  escape.rs  lib.rs  options.rs  serialize.rs  style.rs  writer.rs
crates/rtfkit-html/src/blocks/: image.rs  list.rs  mod.rs  paragraph.rs  structure.rs  table.rs
crates/rtfkit-render-typst/: Cargo.toml
crates/rtfkit-render-typst/src/: engine.rs  error.rs  lib.rs  options.rs
crates/rtfkit-render-typst/src/map/: image.rs  list.rs  mod.rs  page_semantics.rs  paragraph.rs  structure.rs  table.rs
crates/rtfkit-render-typst/tests/: determinism_tests.rs  integration_tests.rs  snapshot_tests.rs
crates/rtfkit-render-typst/tests/snapshots/: aligned_paragraphs.typ  bullet_list.typ  determinism_verification.typ  formatted_paragraph.typ  mixed_document.typ  nested_list.typ  ordered_list.typ  simple_paragraph.typ  simple_table.typ  special_characters.typ  table_with_merges.typ
crates/rtfkit-style-tokens/: Cargo.toml
crates/rtfkit-style-tokens/src/: builtins.rs  lib.rs  profile.rs  serialize.rs  validate.rs
docs/: INITIAL_DESCRIPTION.md  feature-support.md  limits-policy.md  release-checklist.md  rtf-feature-overview.md  warning-reference.md
fixtures/: alignment.rtf  bold_italic.rtf  complex.rtf  empty.rtf  field_bookmark_anchor_only.rtf  field_docproperty_author.rtf  field_internal_hyperlink_simple.rtf  field_mergefield_preserve_result.rtf  field_mixed_external_internal.rtf  field_nested_formula_fallback.rtf  field_noteref_simple.rtf  field_ref_simple.rtf  field_ref_unresolved_target.rtf  field_seq_simple.rtf  field_unsupported_type_preserve_result.rtf  hyperlink_formatted.rtf  hyperlink_in_table.rtf  hyperlink_missing_fldrslt.rtf  hyperlink_multiple.rtf  hyperlink_simple.rtf  hyperlink_unsupported_field.rtf  image_in_table.rtf  image_jpeg_simple.rtf  image_limit_exceeded.rtf  image_malformed_hex.rtf  image_multiple.rtf  image_png_simple.rtf  image_shppict_nonshppict.rtf  image_unsupported_format.rtf  image_with_dimensions.rtf  limits_cells_exceed.rtf  limits_cells_near_max.rtf  limits_depth_exceed.rtf  limits_depth_near_max.rtf  limits_merge_exceed.rtf  limits_merge_near_max.rtf  limits_rows_exceed.rtf  limits_rows_near_max.rtf  limits_table_stress.rtf  list_bullet_simple.rtf  (+79 more)
golden/: alignment.json  bold_italic.json  complex.json  field_bookmark_anchor_only.json  field_docproperty_author.json  field_internal_hyperlink_simple.json  field_mergefield_preserve_result.json  field_mixed_external_internal.json  field_nested_formula_fallback.json  field_noteref_simple.json  field_ref_simple.json  field_ref_unresolved_target.json  field_seq_simple.json  field_unsupported_type_preserve_result.json  hyperlink_formatted.json  hyperlink_in_table.json  hyperlink_missing_fldrslt.json  hyperlink_multiple.json  hyperlink_simple.json  hyperlink_unsupported_field.json  image_in_table.json  image_jpeg_simple.json  image_limit_exceeded.json  image_multiple.json  image_png_simple.json  image_shppict_nonshppict.json  image_with_dimensions.json  limits_cells_exceed.json  limits_cells_near_max.json  limits_depth_exceed.json  limits_depth_near_max.json  (+95 more)
(+246 files in other folders)
