[workspace]
members = ["crates/rtfkit-core", "crates/rtfkit-cli", "crates/rtfkit-docx", "crates/rtfkit-html", "crates/rtfkit-render-typst", "crates/rtfkit-style-tokens"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TorstenCScholz/rtfkit.git"
