[package]
name = "rtfkit-python"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = "1"
serde_json = "1"
rtfkit-core = { path = "../../crates/rtfkit-core" }
rtfkit-html = { path = "../../crates/rtfkit-html" }
rtfkit-docx = { path = "../../crates/rtfkit-docx" }
rtfkit-render-typst = { path = "../../crates/rtfkit-render-typst" }
rtfkit-style-tokens = { path = "../../crates/rtfkit-style-tokens" }
