[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rtfkit"
version = "0.1.0"
description = "Convert RTF documents to HTML, DOCX, and PDF"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
keywords = ["rtf", "html", "docx", "pdf", "converter"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rtfkit._native"

[tool.pytest.ini_options]
testpaths = ["tests"]
