[package]
name = "rtfkit-cli"
description = "A CLI tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rtfkit-cli"
path = "src/main.rs"

[dependencies]
rtfkit-core = { path = "../rtfkit-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
similar = "2"
