[package]
name = "rtfkit"
description = "A CLI tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rtfkit"
path = "src/main.rs"

[dependencies]
rtfkit-core = { path = "../rtfkit-core" }
rtfkit-docx = { path = "../rtfkit-docx" }
rtfkit-html = { path = "../rtfkit-html" }
rtfkit-render-typst = { path = "../rtfkit-render-typst" }
rtfkit-style-tokens = { path = "../rtfkit-style-tokens" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
similar = "2"
tempfile = "3"
zip = "2"
quick-xml = "0.37"
