[package]
name = "rtfkit-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DOCX writer for rtfkit IR documents"

[dependencies]
rtfkit-core = { path = "../rtfkit-core" }
rtfkit-style-tokens = { path = "../rtfkit-style-tokens" }
docx-rs = "0.4"
thiserror = "2.0"
indexmap = "2.7"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.14"
