[package]
name = "rtfkit-html"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML writer for rtfkit IR documents"

[dependencies]
rtfkit-core = { path = "../rtfkit-core" }
rtfkit-style-tokens = { path = "../rtfkit-style-tokens" }
thiserror = "2.0"
base64 = "0.22"

[dev-dependencies]
